tests/tmytests/bad/field_collision_5.lat
class Ok {
    int a;
    int b;
}

class GoodKiddo extends Ok {
    int c;
}

class BadKiddo extends Ok {
    int a;
    int c;
}

int main() {
    return 0;
}